- fixed the center alignment for craftsman.

--- a/src/public/assets/styles/_parallels.scss
+++ b/src/public/assets/styles/_parallels.scss
@@ -73,10 +73,15 @@ $arrow-box-point-offset-y: 0;
 }
 
 .parallels__barrel,
-.parallels__content,
-.parallels__title {
+.parallels__content {
   width: 30%;
 }
+
+.parallels__title {
+  width: 33%;
+  text-align: center;
+}
+
 .parallels__bg {
   background-position: center center;
   background-repeat: no-repeat;
